--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -1,238 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+  xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 <head>
-    <meta charset="utf-8">
-    <title>지도테스트</title>
-<style>
-html, body {width:100%;height:100%;margin:0;padding:0;} 
-.map_wrap {position:relative;overflow:hidden;width:100%;height:800px;}
-.radius_border{border:1px solid #919191;border-radius:5px;}     
-.custom_typecontrol {position:absolute;top:10px;right:10px;overflow:hidden;width:130px;height:30px;margin:0;padding:0;z-index:1;font-size:12px;font-family:'Malgun Gothic', '맑은 고딕', sans-serif;}
-.custom_typecontrol span {display:block;width:65px;height:30px;float:left;text-align:center;line-height:30px;cursor:pointer;}
-.custom_typecontrol .btn {background:#fff;background:linear-gradient(#fff,  #e6e6e6);}       
-.custom_typecontrol .btn:hover {background:#f5f5f5;background:linear-gradient(#f5f5f5,#e3e3e3);}
-.custom_typecontrol .btn:active {background:#e6e6e6;background:linear-gradient(#e6e6e6, #fff);}    
-.custom_typecontrol .selected_btn {color:#fff;background:#425470;background:linear-gradient(#425470, #5b6d8a);}
-.custom_typecontrol .selected_btn:hover {color:#fff;}   
-.custom_zoomcontrol {position:absolute;top:50px;right:10px;width:36px;height:80px;overflow:hidden;z-index:1;background-color:#f5f5f5;} 
-.custom_zoomcontrol span {display:block;width:36px;height:40px;text-align:center;cursor:pointer;}     
-.custom_zoomcontrol span img {width:15px;height:15px;padding:12px 0;border:none;}             
-.custom_zoomcontrol span:first-child{border-bottom:1px solid #bfbfbf;}       
+<meta charset="UTF-8" />
+<title>스프링부트 thymeleaf</title>
 
-   
-.dotOverlay {position:relative;bottom:10px;border-radius:6px;border: 1px solid #ccc;border-bottom:2px solid #ddd;float:left;font-size:12px;padding:5px;background:#fff; margin-bottom:40px;}
-.dotOverlay:nth-of-type(n) {border:0; box-shadow:0px 1px 2px #888;}    
-.number {font-weight:bold;color:#FF297B;}
-.dotOverlay:after {content:'';position:absolute;margin-left:-6px;left:50%;bottom:-8px;width:11px;height:8px;background:url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white_small.png')}
-.distanceInfo {position:relative;top:5px;left:5px;list-style:none;margin:0;}
-.distanceInfo .label {display:inline-block;width:50px;}
-.distanceInfo:after {content:none;}
-   
-</style>  
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+
+<style>
+	.devCss {
+		 text-align: center;
+	}
+</style>
+
 </head>
 <body>
-<div class="map_wrap">
-    <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div> 
-    <!-- 지도타입 컨트롤 div 입니다 -->
-    <div class="custom_typecontrol radius_border">
-        <span id="btnRoadmap" class="selected_btn" onclick="setMapType('roadmap')">지도</span>
-        <span id="btnSkyview" class="btn" onclick="setMapType('skyview')">스카이뷰</span>
-    </div>
-    <!-- 지도 확대, 축소 컨트롤 div 입니다 -->
-    <div class="custom_zoomcontrol radius_border"> 
-        <span onclick="zoomIn()"><img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/ico_plus.png" alt="확대"></span>  
-        <span onclick="zoomOut()"><img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/ico_minus.png" alt="축소"></span>
-    </div>
-</div>
-
-<div class="map_info">
-
-평균 주행 거리 : 
-평균 이용 시간 :
-평균 이용 시간대 : 
-
-</div>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=88c8c934121dacce3c8fb18c54975b74"></script>
-<script>
-var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-    mapOption = { 
-        center: new kakao.maps.LatLng(35.877371,128.7347275), // 지도의 중심좌표
-        level: 3 // 지도의 확대 레벨 
-    };
-
-var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
-
-/* *************** 기본 세팅  ******************   */
-//지도타입 컨트롤의 지도 또는 스카이뷰 버튼을 클릭하면 호출되어 지도타입을 바꾸는 함수입니다
-function setMapType(maptype) { 
-    var roadmapControl = document.getElementById('btnRoadmap');
-    var skyviewControl = document.getElementById('btnSkyview'); 
-    if (maptype === 'roadmap') {
-        map.setMapTypeId(kakao.maps.MapTypeId.ROADMAP);    
-        roadmapControl.className = 'selected_btn';
-        skyviewControl.className = 'btn';
-    } else {
-        map.setMapTypeId(kakao.maps.MapTypeId.HYBRID);    
-        skyviewControl.className = 'selected_btn';
-        roadmapControl.className = 'btn';
-    }
-}
-
-// 지도 확대, 축소 컨트롤에서 확대 버튼을 누르면 호출되어 지도를 확대하는 함수입니다
-function zoomIn() {
-    map.setLevel(map.getLevel() - 1);
-}
-
-// 지도 확대, 축소 컨트롤에서 축소 버튼을 누르면 호출되어 지도를 확대하는 함수입니다
-function zoomOut() {
-    map.setLevel(map.getLevel() + 1);
-}
-
-/* *************** 기본 세팅 끝 ******************   */
-
-/* *************** geolocation으로 현재 위치 받아오기  ******************   */
-
-// HTML5의 geolocation으로 사용할 수 있는지 확인합니다 
-if (navigator.geolocation) {
-    
-    // GeoLocation을 이용해서 접속 위치를 얻어옵니다
-    navigator.geolocation.getCurrentPosition(function(position) {
-        
-        var lat = position.coords.latitude, // 위도
-            lon = position.coords.longitude; // 경도
-        
-        var locPosition = new kakao.maps.LatLng(lat, lon), // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
-            message = '<div style="padding:5px;">현재 위치</div>'; // 인포윈도우에 표시될 내용입니다
-        
-        // 마커와 인포윈도우를 표시합니다
-        displayMarker(locPosition, message);
-            
-      });
-    
-} else { // HTML5의 GeoLocation을 사용할 수 없을때 마커 표시 위치와 인포윈도우 내용을 설정합니다
-    
-    var locPosition = new kakao.maps.LatLng(33.450701, 126.570667),    
-        message = 'geolocation을 사용할수 없어요..'
-        
-    displayMarker(locPosition, message);
-}
-
-// 지도에 마커와 인포윈도우를 표시하는 함수입니다
-function displayMarker(locPosition, message) {
-
-	var imageSrc = '../img/logo.png', // 마커이미지의 주소입니다    
-    imageSize = new kakao.maps.Size(40, 50), // 마커이미지의 크기입니다
-    imageOption = {offset: new kakao.maps.Point(27, 69)}; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
-      
-	// 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
-	var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption)
-
-    
-    // 마커를 생성합니다
-    var marker = new kakao.maps.Marker({  
-        map: map, 
-        position: locPosition,
-        image: markerImage // 마커이미지 설정 
-    }); 
-    
-    var iwContent = message, // 인포윈도우에 표시할 내용
-        iwRemoveable = true;
-
-    // 인포윈도우를 생성합니다
-    var infowindow = new kakao.maps.InfoWindow({
-        content : iwContent,
-        removable : iwRemoveable
-    });
-    
-    // 인포윈도우를 마커위에 표시합니다 
-    infowindow.open(map, marker);
-    
-    // 지도 중심좌표를 접속위치로 변경합니다
-    map.setCenter(locPosition);      
-}    
-
-/* *************** geolocation으로 현재 위치 받아오기  끝 ******************   */ 
-
-
-/* *************** polyline  ******************   */
-
-
-	    
-// 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
-var linePath = [
-    new kakao.maps.LatLng(35.877492, 128.735358),
-    new kakao.maps.LatLng(35.877683, 128.733033),
-    new kakao.maps.LatLng(35.875762, 128.732738),
-    new kakao.maps.LatLng(35.876092, 128.729718)
-];
-
-// 마커생성 **************************
-var StratMakerSrc = '../img/start.png', // 마커이미지의 주소입니다
-	imageSize = new kakao.maps.Size(50, 50), // 마커이미지의 크기입니다
-	imageOption = {offset: new kakao.maps.Point(27, 40)}; //마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
-  
-var FinishMarkerSrc = '../img/finish.png',
-	imageSize = new kakao.maps.Size(50, 50), // 마커이미지의 크기입니다
-	imageOption = {offset: new kakao.maps.Point(27, 40)}; //마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
 	
-// 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
-var StratMakerImg = new kakao.maps.MarkerImage(StratMakerSrc, imageSize, imageOption),
-	StratMakerPosition = linePath[0]; // 마커가 표시될 위치입니다
+	<div class="container">
+		<div class="row col-md-7 table-responsive">
+			<table class="table devCss" id="listTable">
+		    <thead>
+			    <tr>
+			         <th>제목</th>
+			         <th>내용</th>
+			         <th>등록한 ID</th>
+			         <th>등록한 날짜</th>
+			     </tr>
+		     </thead>
+		     <tbody>
+			     <tr th:each="riding : ride">
+			         <td th:text="${riding.rideId}">title</td>    
+			         <td th:text="${riding.rideUser}">content</td>
+			         <td th:text="${riding.rideLat}">regid</td>
+			         <td th:text="${riding.rideLon}">regdate</td>
+			     </tr>	
+
+
+		     </tbody>
+		     </table>
+	     </div>
+	</div>
 	
-var FinishMarkerImg = new kakao.maps.MarkerImage(FinishMarkerSrc, imageSize, imageOption),
-	FinishMarkerPosition = linePath[linePath.length-1]; 
-    
-//마커를 생성합니다
-   var StratMaker = new kakao.maps.Marker({
-       position: StratMakerPosition, 
-       image: StratMakerImg // 마커이미지 설정 
-   });
-
-   var FinishMarker = new kakao.maps.Marker({
-       position: FinishMarkerPosition, 
-       image: FinishMarkerImg //마커이미지 설정 
-   });
-   
-   // 마커가 지도 위에 표시되도록 설정합니다
-   StratMaker.setMap(map);  
-   FinishMarker.setMap(map); 
-    
-// 마커생성 **************************
-
-
-// 지도에 표시할 선을 생성합니다
-var polyline = new kakao.maps.Polyline({
-    path: linePath, // 선을 구성하는 좌표배열 입니다
-    strokeWeight: 5, // 선의 두께 입니다
-    strokeColor: '#FF297B', // 선의 색깔입니다
-    strokeOpacity: 0.8, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
-    strokeStyle: 'solid' // 선의 스타일입니다
-});
-
-// 지도에 선을 표시합니다 
-polyline.setMap(map);  
-
-var distance = Math.round(polyline.getLength());
-displayCircleDot(linePath, distance);
-
-function displayCircleDot(linePath, distance) {
-
-    if (distance > 0) {
-        // 클릭한 지점까지의 그려진 선의 총 거리를 표시할 커스텀 오버레이를 생성합니다
-        var distanceOverlay = new kakao.maps.CustomOverlay({
-            content: '<div class="dotOverlay">주행 거리 <span class="number">' + distance + '</span>m</div>',
-            position: FinishMarkerPosition,
-            yAnchor: 1,
-            zIndex: 2
-        });
-
-        // 지도에 표시합니다
-        distanceOverlay.setMap(map);
-    }
-
-}
-
-
-</script>
 </body>
 </html>
